[package]
name = "nfs-watcher"
version = "0.1.0"
authors = ["Levi Murray <levidavidmurray@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.2"
ssh2 = "0.8.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
path_abs = "0.5.0"
